--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 #Mon Nov 28 15:28:34 NZDT 2016
 excludes=
+file.reference.jl1.0.1.jar=C:\\Users\\NAN\\Desktop\\jl1.0.1.jar
 file.reference.mysql-connector-java-5.1.41-bin.jar=C:\\Users\\Nan\\Desktop\\mysql-connector-java-5.1.41-bin.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
@@ -54,7 +55,8 @@ mkdist.disabled=false
 endorsed.classpath=
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.41-bin.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jl1.0.1.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
